# serializer version: 1
# name: test_e2e_sample_projects[cmake_vcpkg_project]
  dict({
    'agent': dict({
      'exit_code': 0,
      'model': '',
      'status_messages': list([
        'Exploring repository structure to identify file types and test locations.',
        'Creating .devcontainer directory and copying required files.',
        'Creating Dockerfile for C++/CMake/vcpkg project.',
        'Building the Docker image to verify the setup.',
        'Running tests in the built container.',
      ]),
      'summary': "Everything worked. C++/CMake/vcpkg project using fmt library; vcpkg is cloned and bootstrapped inside the Dockerfile, dependencies pre-installed for caching, project built at image build time so `run_all_tests.sh` just runs `ctest`. CTest's `--output-junit` flag (available since CMake 3.21, Ubuntu 22.04 ships 3.22) generates JUnit XML directly.",
      'timed_out': False,
    }),
    'error_message': None,
    'generated_files': dict({
      'devcontainer_json': '''
        {
          "build": {
            "dockerfile": "Dockerfile",
            "context": "..",
            "options": [
              "--network=host"
            ]
          },
          "runArgs": [
            "--network=host"
          ]
        }
  
      ''',
      'dockerfile': '''
        FROM ubuntu:22.04
        
        ENV DEBIAN_FRONTEND=noninteractive
        
        # Install system dependencies
        RUN apt-get update && apt-get install -y \
            build-essential \
            cmake \
            git \
            curl \
            zip \
            unzip \
            tar \
            pkg-config \
            ninja-build \
            perl-base \
            ca-certificates \
            && rm -rf /var/lib/apt/lists/*
        
        # Set up timestamp helper script.
        COPY ./.devcontainer/timestamp_process_output.pl /timestamp_process_output.pl
        
        # Create test artifacts directory.
        RUN mkdir -p /test_artifacts && chmod 777 /test_artifacts
        
        # Install and bootstrap vcpkg
        ENV VCPKG_ROOT=/vcpkg
        RUN git clone https://github.com/microsoft/vcpkg.git $VCPKG_ROOT && \
            $VCPKG_ROOT/bootstrap-vcpkg.sh -disableMetrics
        
        # Copy vcpkg manifest first to pre-warm the package cache
        WORKDIR /project_src
        COPY vcpkg.json ./
        
        # Pre-install vcpkg dependencies using manifest mode (cache this layer)
        RUN $VCPKG_ROOT/vcpkg install --no-print-usage
        
        # Copy source code and build files
        COPY CMakeLists.txt ./
        COPY src/ ./src/
        COPY tests/ ./tests/
        
        # Configure and build the project
        RUN cmake -B build -S . \
            -DCMAKE_TOOLCHAIN_FILE=$VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake \
            -DCMAKE_BUILD_TYPE=Release && \
            cmake --build build --parallel $(nproc)
        
        # Copy the test runner script last (this changes often during development)
        COPY .devcontainer/run_all_tests.sh /run_all_tests.sh
        RUN chmod +x /run_all_tests.sh
  
      ''',
      'run_all_tests_sh': '''
        #!/bin/bash
        set -euo pipefail
        
        mkdir -p /test_artifacts/junit
        
        cd /project_src
        
        echo "Running tests with CTest..."
        
        /timestamp_process_output.pl --logfile /test_artifacts/ctest.log \
            ctest --test-dir build \
                --output-on-failure \
                --output-junit /test_artifacts/junit/ctest.xml \
                -V
        
        echo '{"success": true}' > /test_artifacts/final_result.json
        echo "All tests passed!"
  
      ''',
    }),
    'success': True,
    'verification': dict({
      'error_message': None,
      'success': True,
      'test_results': list([
        dict({
          'name': 'test_greeter::test_greeter',
          'passed': True,
          'skipped': False,
        }),
      ]),
    }),
  })
# ---
# name: test_e2e_sample_projects[fullstack_project]
  dict({
    'agent': dict({
      'exit_code': 0,
      'model': '',
      'status_messages': list([
        'Exploring repository structure to identify file types and test locations.',
        'Creating Dockerfile and test runner for Python/Flask backend + Node.js frontend project.',
        'Building the Docker image to verify the setup.',
        'Fixing Dockerfile - no uv.lock file exists, switching to direct pip install.',
        'Build succeeded. Running tests now.',
      ]),
      'summary': 'Everything worked. The project is a Python Flask backend + Node.js frontend with integration tests. Key points: no uv.lock file exists so used `uv pip install` directly rather than `uv sync --locked`; the Node.js frontend tests use the built-in `node --test` runner with `--test-reporter=junit` for JUnit XML output; the frontend integration tests start the Flask server as a subprocess, so both Python (with Flask) and Node.js must be in the same container image.',
      'timed_out': False,
    }),
    'error_message': None,
    'generated_files': dict({
      'devcontainer_json': '''
        {
          "build": {
            "dockerfile": "Dockerfile",
            "context": "..",
            "options": [
              "--network=host"
            ]
          },
          "runArgs": [
            "--network=host"
          ]
        }
  
      ''',
      'dockerfile': '''
        FROM python:3.12-slim
        
        # Install system dependencies including perl and Node.js prerequisites
        RUN apt-get update && apt-get install -y \
            perl-base \
            curl \
            ca-certificates \
            && rm -rf /var/lib/apt/lists/*
        
        # Install Node.js 20 LTS
        RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
            && apt-get install -y nodejs \
            && rm -rf /var/lib/apt/lists/*
        
        # Set up timestamp helper script.
        COPY ./.devcontainer/timestamp_process_output.pl /timestamp_process_output.pl
        
        # Create test artifacts directory.
        RUN mkdir -p /test_artifacts && chmod 777 /test_artifacts
        
        # Copy uv from official image.
        COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
        
        # Very important on Modal -- without this, there is a crazy bug that means that some files do not show up in snapshots!
        # This is because Modal's snapshotting mechanism does not work correctly with symlinks.
        ENV UV_LINK_MODE=copy
        
        # Pre-create uv virtual environment and install Python dependencies.
        ENV UV_PROJECT_ENVIRONMENT=/venv
        RUN uv venv /venv && \
            uv pip install --python /venv/bin/python flask pytest
        
        # Add venv to PATH
        ENV PATH="/venv/bin:$PATH"
        
        # Copy project source files
        WORKDIR /project_src
        COPY backend/ ./backend/
        COPY frontend/ ./frontend/
        
        # Copy the test runner script last (this changes often during development)
        COPY .devcontainer/run_all_tests.sh /run_all_tests.sh
        RUN chmod +x /run_all_tests.sh
  
      ''',
      'run_all_tests_sh': '''
        #!/usr/bin/env bash
        set -euo pipefail
        
        mkdir -p /test_artifacts/junit
        
        echo "=== Running backend Python tests ==="
        cd /project_src/backend
        /timestamp_process_output.pl --logfile /test_artifacts/pytest.log \
            pytest --junitxml=/test_artifacts/junit/pytest.xml -v .
        
        echo "=== Running frontend Node.js tests ==="
        cd /project_src/frontend
        /timestamp_process_output.pl --logfile /test_artifacts/node_test.log \
            timeout 30 node --test --test-reporter=junit --test-reporter-destination=/test_artifacts/junit/node.xml
        
        echo "=== All tests completed ==="
        
        # Write final result
        cat > /test_artifacts/final_result.json <<'EOF'
        {"status": "success"}
        EOF
  
      ''',
    }),
    'success': True,
    'verification': dict({
      'error_message': None,
      'success': True,
      'test_results': list([
        dict({
          'name': 'test::add via API',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'test::multiply via API',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'server_test::test_server_is_running',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'test_simple::test_pass',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'test_simple::test_also_passes',
          'passed': True,
          'skipped': False,
        }),
      ]),
    }),
  })
# ---
# name: test_e2e_sample_projects[python_project]
  dict({
    'agent': dict({
      'cost': dict({
        'ccusage_raw': None,
        'cost_usd': 0.0,
        'cost_usd_computed': 0.0,
        'token_spending': dict({
          'cache_creation': 0,
          'cached': 0,
          'input': 0,
          'output': 0,
        }),
      }),
      'duration_seconds': 0.036527832999126986,
      'end_time': datetime.datetime(2026, 3, 5, 0, 1, 50, 370819, tzinfo=TzInfo(0)),
      'error_messages': list([
      ]),
      'exit_code': 0,
      'start_time': datetime.datetime(2026, 3, 5, 0, 1, 22, 661476, tzinfo=TzInfo(0)),
      'status_messages': list([
        dict({
          'message': 'Exploring repository structure to identify file types and test locations.',
          'timestamp': datetime.datetime(2026, 3, 5, 0, 1, 22, 697257, tzinfo=TzInfo(0)),
        }),
        dict({
          'message': 'Creating .devcontainer directory and files for a simple Python project.',
          'timestamp': datetime.datetime(2026, 3, 5, 0, 1, 22, 697636, tzinfo=TzInfo(0)),
        }),
        dict({
          'message': 'Running guardrail check to validate files.',
          'timestamp': datetime.datetime(2026, 3, 5, 0, 1, 22, 697819, tzinfo=TzInfo(0)),
        }),
      ]),
      'summary': dict({
        'message': 'Everything worked on the first try. Simple Python 3.11 project with uv for dependency management; uv venv pre-created in the Dockerfile for fast layer caching; pytest with --junitxml for JUnit output. Tip: the project is minimal (app.py + tests/test_app.py) with pytest and pytest-json-report as the only dependencies.',
        'timestamp': datetime.datetime(2026, 3, 5, 0, 1, 22, 697880, tzinfo=TzInfo(0)),
      }),
      'timed_out': False,
    }),
    'cli_args': list([
      '/Users/thad/.sculptor_data/workspaces/b47b86b763664e0fbc602fc0aad5bc89/code/.venv/bin/pytest',
      'keystone/tests/test_bootstrap.py::test_e2e_sample_projects',
      '--snapshot-update',
      '-v',
    ]),
    'error_message': None,
    'evaluator': dict({
      'cost_usd': 0.0,
      'issues': list([
      ]),
      'model': '',
      'passed': True,
      'reasoning': 'Skipped: ANTHROPIC_API_KEY not available',
    }),
    'generated_files': dict({
      'devcontainer_json': '''
        {
          "build": {
            "dockerfile": "Dockerfile",
            "context": "..",
            "options": [
              "--network=host"
            ]
          },
          "runArgs": [
            "--network=host"
          ]
        }
  
      ''',
      'dockerfile': '''
        FROM python:3.11-slim
        
        # Create test artifacts directory.
        RUN mkdir -p /test_artifacts && chmod 777 /test_artifacts
        
        # Copy uv from official image.
        COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
        
        # Very important on Modal -- without this, there is a crazy bug that means that some files do not show up in snapshots!
        # This is because Modal's snapshotting mechanism does not work correctly with symlinks.
        ENV UV_LINK_MODE=copy
        
        # Pre-create uv virtual environment and install dependencies.
        # Install dependencies first (without the project itself) to maximize layer caching.
        COPY pyproject.toml uv.lock /tmp/deps/
        ENV UV_PROJECT_ENVIRONMENT=/venv
        RUN cd /tmp/deps && uv sync --locked --no-install-project && \
            echo "Python virtual environment created successfully at $UV_PROJECT_ENVIRONMENT"
        
        # Copy source code (these won't change during agent work)
        WORKDIR /project_src
        COPY app.py ./
        COPY tests/ ./tests/
        
        # Copy the test runner script last (this changes often during development)
        COPY .devcontainer/run_all_tests.sh /run_all_tests.sh
        RUN chmod +x /run_all_tests.sh
  
      ''',
      'run_all_tests_sh': '''
        #!/usr/bin/env bash
        set -euo pipefail
        
        mkdir -p /test_artifacts/junit
        
        export PYTHONPATH=/project_src:${PYTHONPATH:-}
        
        echo "Running pytest..."
        timeout 120 /venv/bin/pytest /project_src/tests/ \
            --junitxml=/test_artifacts/junit/pytest.xml \
            --no-header \
            -v
        
        TEST_EXIT=$?
        
        if [ $TEST_EXIT -eq 0 ]; then
            echo '{"success": true}' > /test_artifacts/final_result.json
        else
            echo '{"success": false}' > /test_artifacts/final_result.json
        fi
        
        exit $TEST_EXIT
  
      ''',
    }),
    'success': True,
    'verification': dict({
      'error_message': None,
      'image_build_seconds': 7.176905870437622,
      'success': True,
      'test_execution_seconds': 1.3024802207946777,
      'test_results': list([
        dict({
          'name': 'tests.test_app::test_add',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'tests.test_app::test_multiply',
          'passed': True,
          'skipped': False,
        }),
      ]),
      'tests_failed': 0,
      'tests_passed': 2,
      'tests_skipped': 0,
    }),
  })
# ---
# name: test_e2e_sample_projects[python_with_failing_test]
  dict({
    'agent': dict({
      'exit_code': 0,
      'model': '',
      'status_messages': list([
        'Exploring repository structure to identify file types and test locations.',
        'Creating .devcontainer directory and copying pre-generated files.',
        'Creating Dockerfile for Python 3.12 project with uv.',
        'Creating run_all_tests.sh script.',
        'Building the Docker image to verify the setup.',
        'Image built successfully. Running tests to verify.',
        "Fixing PYTHONPATH issue - tests can't import app module.",
      ]),
      'summary': 'Tests run successfully. The project is a minimal Python 3.12 project using uv + pytest. Two tests pass, one (`test_impossible`) always fails by design. The key fix needed was setting `PYTHONPATH=/project_src` in `run_all_tests.sh` so pytest could import the `app` module since the project source is not installed as a package. The `uv sync --locked` in the Dockerfile pre-warms all dependencies for fast layer caching.',
      'timed_out': False,
    }),
    'error_message': 'Test run failed with return code 1',
    'generated_files': dict({
      'devcontainer_json': '''
        {
          "build": {
            "dockerfile": "Dockerfile",
            "context": "..",
            "options": [
              "--network=host"
            ]
          },
          "runArgs": [
            "--network=host"
          ]
        }
  
      ''',
      'dockerfile': '''
        FROM python:3.12-slim
        
        # Install system dependencies
        RUN apt-get update && apt-get install -y --no-install-recommends \
            perl-base \
            && rm -rf /var/lib/apt/lists/*
        
        # Set up timestamp helper script.
        COPY ./.devcontainer/timestamp_process_output.pl /timestamp_process_output.pl
        
        # Create test artifacts directory.
        RUN mkdir -p /test_artifacts && chmod 777 /test_artifacts
        
        # Copy uv from official image.
        COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
        
        # Set uv environment variables
        ENV UV_LINK_MODE=copy
        ENV UV_PROJECT_ENVIRONMENT=/venv
        
        # Pre-create uv virtual environment and install dependencies.
        # Install dependencies first (without the project itself) to maximize layer caching.
        COPY pyproject.toml uv.lock /tmp/deps/
        RUN cd /tmp/deps && \
            uv sync --locked --no-install-project && \
            echo "Python virtual environment created successfully at $UV_PROJECT_ENVIRONMENT"
        
        # Copy source code
        WORKDIR /project_src
        COPY app.py ./
        COPY tests/ ./tests/
        COPY pyproject.toml uv.lock ./
        
        # Install the project itself
        RUN uv sync --locked
        
        # Ensure the venv is on the PATH
        ENV PATH="/venv/bin:$PATH"
        
        # Copy the test runner script last (this changes often during development)
        COPY .devcontainer/run_all_tests.sh /run_all_tests.sh
        RUN chmod +x /run_all_tests.sh
  
      ''',
      'run_all_tests_sh': '''
        #!/usr/bin/env bash
        set -uo pipefail
        
        mkdir -p /test_artifacts/junit
        
        cd /project_src
        export PYTHONPATH=/project_src:${PYTHONPATH:-}
        
        echo "Running pytest..."
        /timestamp_process_output.pl --logfile /test_artifacts/pytest.log \
            pytest \
            --junitxml=/test_artifacts/junit/pytest.xml \
            --no-header \
            -v \
            tests/
        TEST_EXIT_CODE=$?
        
        # Write final result
        if [ $TEST_EXIT_CODE -eq 0 ]; then
            echo '{"success": true, "exit_code": 0}' > /test_artifacts/final_result.json
        else
            echo "{\"success\": false, \"exit_code\": $TEST_EXIT_CODE}" > /test_artifacts/final_result.json
        fi
        
        echo "Test run complete. Exit code: $TEST_EXIT_CODE"
        cat /test_artifacts/final_result.json
        
        exit $TEST_EXIT_CODE
  
      ''',
    }),
    'success': False,
    'verification': dict({
      'error_message': 'Test run failed with return code 1',
      'success': False,
      'test_results': list([
        dict({
          'name': 'tests.test_app::test_add',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'tests.test_app::test_multiply',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'tests.test_app::test_impossible',
          'passed': False,
          'skipped': False,
        }),
      ]),
    }),
  })
# ---
